--- a/DSEwk2Workshop.Rmd
+++ b/DSEwk2Workshop.Rmd
@@ -14,6 +14,37 @@ output:
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+## Stocks Data
+
+Stocks data exercise
+
+```{r stocks, echo=FALSE}
+stocksdata = readRDS("../Data/wk2_stocks.rds")
+
+sum(stocksdata$SPY_returns) #2.183304
+sum(stocksdata$SPY_returns)/(5798) #0.0003765616
+sd(stocksdata$SPY_returns) #0.01221943
+
+library(ggplot2)
+library(dplyr)
+library(tidyverse)
+library(gridExtra)
+install.packages("tidyverse")
+
+prices = ggplot(stocksdata, aes(x=date, y=SPY_prices))+
+  geom_line()
+
+
+yearly_returns_data = stocksdata %>%
+  filter(month(date)==1, day(date)==3)
+yearly_returns = ggplot(yearly_returns_data, aes(x=date, y=SPY_prices))+
+  geom_line()
+
+grid.arrange(yearly_returns, prices)
+```
+
+Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+
 ## R Markdown
 
 This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
@@ -33,3 +64,5 @@ plot(pressure)
 ```
 
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+
+
